--- a/stockwatch/MainPage.xaml
+++ b/stockwatch/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="stockwatch.MainPage">
+             x:Class="stockwatch.MainPage"
+             Title="My symbol">
 
     <ScrollView>
         <VerticalStackLayout
@@ -12,15 +13,15 @@
                     Grid.Row="0"
                     Grid.Column="0"
                     VerticalTextAlignment="Center"
-                    Text="Sympol: "/>
+                    Text="Symbol: "/>
                 <Entry
                     x:Name="entSymbol"
                     Grid.Row="0"
                     Grid.Column="1"
                     Grid.ColumnSpan="2"
-                    Placeholder="Input sympol"
+                    Placeholder="Input symbol"
                     TextTransform="Uppercase"
-                    TextChanged="OnEntSymbolTextChanged"/>
+                    TextChanged="OnInputsTextChanged"/>
 
                 <Label 
                     Grid.Row="1"
@@ -34,7 +35,8 @@
                     Grid.ColumnSpan="2"
                     Placeholder="Input reference price"
                     Keyboard="Numeric"
-                    Text="0"/>
+                    Text="0"
+                    TextChanged="OnInputsTextChanged"/>
 
                 <Label 
                     Grid.Row="2"
@@ -46,12 +48,13 @@
                     Grid.Row="2"
                     Grid.Column="1"
                     Keyboard="Numeric"
-                    Text="5"/>
+                    Text="5"
+                    TextChanged="OnInputsTextChanged"/>
                 <Label 
                     Grid.Row="2"
                     Grid.Column="2"
                     VerticalTextAlignment="Center"
-                    Text="%"/>
+                    Text="% (higher)"/>
 
                 <Label 
                     Grid.Row="3"
@@ -63,12 +66,13 @@
                     Grid.Row="3"
                     Grid.Column="1"
                     Keyboard="Numeric"
-                    Text="5"/>
+                    Text="5"
+                    TextChanged="OnInputsTextChanged"/>
                 <Label 
                     Grid.Row="3"
                     Grid.Column="2"
                     VerticalTextAlignment="Center"
-                    Text="%"/>
+                    Text="% (lower)"/>
             </Grid>
             
             <Button
@@ -88,7 +92,7 @@
 
             <HorizontalStackLayout>
                 <Label 
-                    Text="Latest data at "/>
+                    Text="Latest data at: "/>
                 <Label
                     x:Name="lblLatestDataAt"
                     Text="N/A"/>
