--- a/stockwatch/Pages/MainPage.xaml
+++ b/stockwatch/Pages/MainPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="stockwatch.MainPage"
+             x:Class="stockwatch.Pages.MainPage"
              Title="My symbol">
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
+            Padding="10,0"
             Spacing="25">
             <Grid RowDefinitions="Auto,Auto,Auto,*" ColumnDefinitions="Auto,Auto,*">
                 <Label 
@@ -74,13 +74,13 @@
                     VerticalTextAlignment="Center"
                     Text="% (lower)"/>
             </Grid>
-            
+
             <Button
-                x:Name="btnWatch"
-                Text="Watch" 
-                SemanticProperties.Hint="Start watching"
-                Clicked="OnWatchButtonClicked"
-                HorizontalOptions="Fill" />
+                    x:Name="btnWatch"
+                    Text="Watch" 
+                    SemanticProperties.Hint="Start watching"
+                    Clicked="OnWatchButtonClicked"
+                    HorizontalOptions="Fill" />
 
             <HorizontalStackLayout>
                 <Label 
