refactor: relocate the UI service and Logic service

--- a/stockwatch/Popups/LoadingPopup.xaml
+++ b/stockwatch/Popups/LoadingPopup.xaml
@@ -13,8 +13,7 @@
         
         <VerticalStackLayout
             HorizontalOptions="Center"
-            VerticalOptions="Center"
-            BackgroundColor="WhiteSmoke">
+            VerticalOptions="Center">
             
             <ActivityIndicator
                 IsRunning="True"
@@ -24,7 +23,10 @@
             <Label 
                 x:Name="lblLoadingMessage"
                 HorizontalOptions="Center"
-                VerticalOptions="Center"/>
+                VerticalOptions="Center"
+                HorizontalTextAlignment="Center"
+                VerticalTextAlignment="Center"
+                Margin="0,5,0,0"/>
             
         </VerticalStackLayout>
     </Frame>
