--- a/stockwatch/Pages/FindPotentialSymbolPage.xaml
+++ b/stockwatch/Pages/FindPotentialSymbolPage.xaml
@@ -9,9 +9,15 @@
         <ResourceDictionary>
             <toolkit:IsEqualConverter x:Key="IsEqualConverter" />
             <toolkit:IsNotEqualConverter x:Key="IsNotEqualConverter" />
-            <toolkit:BoolToObjectConverter x:Key="FavoriteConverter" 
-                                           TrueObject="favorite_empty.png"
-                                           FalseObject="favorite_full.png"/>
+            <toolkit:BoolToObjectConverter x:Key="FavoriteIconConverter" 
+                                           TrueObject="favorite_full.jpg"
+                                           FalseObject="favorite_empty.png"/>
+            <toolkit:BoolToObjectConverter x:Key="FavoriteTextConverter" 
+                                           TrueObject="Unfavored"
+                                           FalseObject="Favorite"/>
+            <toolkit:BoolToObjectConverter x:Key="FavoriteColorConverter" 
+                                           TrueObject="LightPink"
+                                           FalseObject="LightGreen"/>
         </ResourceDictionary>
     </ContentPage.Resources>
 
@@ -105,9 +111,9 @@
                                     <SwipeItem
                                         Invoked="FavoriteItem_Invoked"
                                         CommandParameter="{Binding .}"
-                                        Text="Favorite"
-                                        IconImageSource="{Binding IsFavorite, Converter={x:StaticResource FavoriteConverter}}"
-                                        BackgroundColor="LightGreen"
+                                        Text="{Binding IsFavorite, Converter={x:StaticResource FavoriteTextConverter}}"
+                                        IconImageSource="{Binding IsFavorite, Converter={x:StaticResource FavoriteIconConverter}}"
+                                        BackgroundColor="{Binding IsFavorite, Converter={x:StaticResource FavoriteColorConverter}}"
                                         ></SwipeItem>
                                 </SwipeItems>
                             </SwipeView.RightItems>
