--- a/stockwatch/Pages/FindPotentialSymbolPage.xaml
+++ b/stockwatch/Pages/FindPotentialSymbolPage.xaml
@@ -7,8 +7,8 @@
              Title="Potential symbols">
     <ContentPage.Resources>
         <ResourceDictionary>
-            <toolkit:IsEqualConverter x:Key="IsEqualConverter" />
             <toolkit:IsNotEqualConverter x:Key="IsNotEqualConverter" />
+            <toolkit:IsNotNullConverter x:Key="IsNotNullConverter" />
             <toolkit:BoolToObjectConverter x:Key="FavoriteIconConverter" 
                                            TrueObject="favorite_full.jpg"
                                            FalseObject="favorite_empty.png"/>
@@ -52,7 +52,7 @@
                 SelectedIndex="0"
                 IsVisible="{Binding Source={x:Reference pckAlgorithm},
                                     Path=SelectedItem,
-                                    Converter={x:StaticResource IsEqualConverter},
+                                    Converter={x:StaticResource IsNotEqualConverter},
                                     ConverterParameter='Amplitude'}"
                 Title="Price type (default Price)">
             </Picker>
@@ -60,9 +60,9 @@
             <Grid ColumnDefinitions="Auto, Auto" RowDefinitions="Auto">
                 <Entry
                     Grid.Row="0" Grid.Column="0"
-                    WidthRequest="80"
+                    WidthRequest="90"
                     x:Name="entExpectedPercentage"
-                    Placeholder="Expected min percentage"
+                    Placeholder="Expectation"
                     Keyboard="Numeric"
                     Text="5"/>
                 <Label 
@@ -84,7 +84,7 @@
                         ColumnDefinitions="100, 100, *"
                         IsVisible="{Binding Source={x:Reference clvResult}, 
                                             Path=ItemsSource,
-                                            Converter={x:StaticResource IsNotEqualConverter}}">
+                                            Converter={x:StaticResource IsNotNullConverter}}">
                         <Label
                             Grid.Column="0"
                             Margin="4, 0, 0, 0"
@@ -119,7 +119,7 @@
                             </SwipeView.RightItems>
 
                             <Grid 
-                                ColumnDefinitions="100, 100, *"
+                                ColumnDefinitions="100, 100, *, 25"
                                 BackgroundColor="WhiteSmoke"
                                 HeightRequest="40"
                                 Margin="0, 1, 0, 1">
@@ -136,6 +136,13 @@
                                     Grid.Column="2"
                                     Text="{Binding MatchedRecordCount}"
                                     VerticalOptions="Center"></Label>
+                                <Image
+                                    Grid.Column="3"
+                                    Source="favorite_full.jpg"
+                                    HeightRequest="15"
+                                    WidthRequest="15"
+                                    VerticalOptions="Center"
+                                    IsVisible="{Binding IsFavorite}"/>
                             </Grid>
                         </SwipeView>
                         
